...
                onPressed: () => Navigator.of(context).pushNamed("/nve"),
                child: Text("nve")),
            RaisedButton(
                onPressed: () => Navigator.of(context).pushNamed("/zht"),
                child: Text("zht")),
            RaisedButton(
                key: Key('PfyMainBtn'),
                onPressed: () => Navigator.of(context).pushNamed("/pfy"),
                child: Text("pfy")),
          ],
        ),
      ),
    );
...
