...
    );
  }

  Text buildEmptyScreen() {
    return Text(
      "No starting position registered",
      key: Key('noStartLocationText'),
      style: TextStyle(
        fontSize: 20,
        fontWeight: FontWeight.bold,
        color: STARTING_LOCATION_PRIMARY_DARK_TEXT_COLOR,
      ),
    );
...
