...
                                      loading = true;
                                    });
                                    locationProvider.makeAsStart();
                                  },
                                  child: Text(
                                    "Make as start",
                                    key: Key('makeAsStartText'),
                                    textAlign: TextAlign.center,
                                  ),
                                ),
                              ],
                            ),
                            Builder(builder: (context) {
...
