...
              ),
              Header(
                height: headerHeight,
              ),
              buildMenuIcon(),
              Positioned(
                key: Key('headerIndicator'),
                top: headerHeight - 32,
                left: MediaQuery.of(context).size.width / 2 - 32,
                child: Container(
                  height: 64,
                  width: 64,
                  child: Material(
...
